2000-01-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c: Drive ONCORE_SHMEM_STATUS based on
	HAVE_SYS_MMAN_H .  If this needs finer checks, do it in
	configure.in .
	(oncore_read_config): Add the isascii() checks; older versions of
	Unix don't guarantee correct behavior of is*() without it.

	* ntpd/refclock_oncore.c: Add proof-of-concept support for 
	  delivering receiver data stream to other processes through
	  a memory-mapped file.
	  From: Poul-Henning Kamp <phk@FreeBSD.org>

	* configure.in (ac_refclock_chu): Provide the CHU driver by
	default, and by default prefer the AUDIO version.  We used to
	limit this to SunOS or Solaris; now we drive by the availability
	of the audioio header file.
	Select the IRIG and WWV audio drivers the same way.

	* flock-build: build ignores the -l flag; lose it.
	(BUILD_ARGS): added.
	* build: Remove unused -l stuff (LOG variable).

	* ntpd/ntp_refclock.c: HAVE_PPSAPI header cleanup
	From: Reg Clemens <reg@dwf.com>

2000-01-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (CLOCK_WWV): Require <sys/audioio.h> or <sun/audioio.h>

1999-12-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98i

	* ntpd/refclock_gpsvme.c: Fixes
	From: Michael Barone <michael.barone@lmco.com>
	Patch severely hacked by HMS to "make it conform".  I hope I
	didn't break anything.

	* scripts/ntpsweep: Nifty utility
	From: Hans.Lambermont@nl.origin-it.com

	* ntpd/refclock_fg.c: 
	* ntpd/refclock_conf.c: 
	* ntpd/ntp_control.c: 
	* ntpd/Makefile.am: 
	* libntp/clocktypes.c: 
	* include/ntp.h: 
	* html/refclock.htm: 
	* html/driver37.htm: 
	* configure.in: 
	* acconfig.h: 
	Forum Graphic GPS clock support
	From: Dmitry Smirnov <das@online.nsk.su>
	
	* configure.in: Default to compile the IRIG, CHU and WWV/H
	drivers and compile the CHU driver for audio, not modem.
	Requested by Dave Mills.

	* html/audio.htm: 
	* html/driver36.htm: 
	* html/qth.htm: 